About and create page change

--- a/tnp/templates/base.html
+++ b/tnp/templates/base.html
@@ -18,7 +18,7 @@
 
     <body id="main_body">
       <div class="navbar-fixed">
-        <nav class="blue z-depth-3">
+        <nav class="blue darken-1 z-depth-3">
           <div class="nav-wrapper container">
             <a href="/" class="waves-effect brand-logo white-text text-darken-2"> Training and Placement, SVNIT </a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -57,8 +57,8 @@
 
       {% block body_block %}{% endblock %}
 
-      <footer class="page-footer white-text text-darken-4 blue">
-        <div class="footer-copyright white-text text-darken-2 blue " style="height: 50px">
+      <footer class="page-footer white-text text-darken-4 blue darken-1">
+        <div class="footer-copyright white-text text-darken-2 blue darken-1" style="height: 50px">
 
           <div class="container">
             <p class="white-text text-darken-2"> <strong> © 2017 Copyright SVNIT </strong>
