--- a/tnp/templates/index.html
+++ b/tnp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} TnP {% endblock %}
+{% block title %} T&P cell {% endblock %}
 
 {% block custom_css %}
 <link type="text/css" rel="stylesheet" href="/static/css/index.css"/>
