--- a/tnp/templates/about.html
+++ b/tnp/templates/about.html
@@ -8,13 +8,13 @@
 
 {% block body_block %}
 
-	<div id="content" style="min-height: calc(100vh - 120px);">
+	<div id="content" style="min-height: calc(77vh);">
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m10 offset-m1">
 					<div class="card z-depth-2">
 
-						<div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
+						<div class="card-content grey-text text-lighten-5 blue darken-1 z-depth-1">
 	            <span class="card-title">
 	            	About
 	            </span>
@@ -23,7 +23,7 @@
 	          <div class="col s12 m12">
               <div class="card hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
                   <div class="card-content">
-                    <p class="">
+                    <p class="flow-text" style="font-size:1.5em;">
                     	This website is built for easing the placement process at Sardar Vallabhbhai National Institute of Technology, Surat. It acts as a single platform for the Training and Placement Cell and students for data management of various companies visiting for campus recruitment and students who have applied for it. Students can find all the necessary information related to the company like job profile, selection procedure, CTC, etc and the placement cell can see who applied and export the required student data to be sent the company.
                     </p>
                   </div>
