new color schema

--- a/tnp/templates/consent/create_account.html
+++ b/tnp/templates/consent/create_account.html
@@ -27,7 +27,7 @@
 					<form method="post" id="create_account_form" enctype="multipart/form-data">
 						{% csrf_token %}
 						<div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
-	                    	<div class="card-content blue grey-text text-lighten-5 z-depth-2">
+	                    	<div class="card-content orange lighten-2 grey-text text-lighten-5 z-depth-2">
 	                      		<span class="card-title"> Preliminary Details </span>
 	                    	</div>
 
@@ -86,7 +86,7 @@
 	                    </div>
 
 	                    <div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
-	                    	<div class="card-content blue grey-text text-lighten-5 z-depth-2">
+	                    	<div class="card-content orange lighten-2 grey-text text-lighten-5 z-depth-2">
 	                      		<span class="card-title"> Personal Details </span>
 	                    	</div>
 
@@ -182,7 +182,7 @@
 	                    </div>
 
 	                    <div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
-	                    	<div class="card-content blue grey-text text-lighten-5 z-depth-2">
+	                    	<div class="card-content orange lighten-2 grey-text text-lighten-5 z-depth-2">
 	                      		<span class="card-title"> Educational Details </span>
 	                    	</div>
 
@@ -337,7 +337,7 @@
 		                    	<div class="col s5 offset-s1">
                                         <i class="material-icons grey-text text-darken-2 left" style="margin-top: 25px;">attach_file</i>
                                         <div class="file-field input-field">
-                                             <div class="waves-effect waves-light btn blue darken-3 grey-text text-lighten-5">
+                                             <div class="waves-effect waves-light btn orange grey-text text-lighten-5">
                                                 Attach Resume
                                                 <span class="filename">
                                                 		{{ education_detail_form.resume }}
@@ -366,7 +366,7 @@
 	                    </div>
 
 	                    <center>
-		                    <button class="waves-effect waves-light btn-large blue darken-3 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit"> Create Account </button>
+		                    <button class="waves-effect waves-light btn-large orange grey-text text-lighten-5 hoverable" id="create_account_button" type="submit"> Create Account </button>
 		                </center>
 					</form>
 				</div>
