--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -27,7 +27,7 @@
            <div class="row">
               <div class="col s12 m6 offset-m3">
                  <div class="card z-depth-4">
-                    <div class="card-content grey-text text-lighten-5  blue darken-1 z-depth-1">
+                    <div class="card-content grey-text text-lighten-5 light-green darken-1 z-depth-1">
                        <span class="card-title center">Sign In</span>
                     </div>
 
@@ -50,10 +50,10 @@
                             </div>
                           </div>
                           <div class="row center">
-                            <button style="width: 200px;" type="submit" class="btn  blue darken-1 waves-effect grey-text text-lighten-5" value="Sign In">
+                            <button style="width: 200px;" type="submit" class="btn light-green darken-1 waves-effect grey-text text-lighten-5" value="Sign In">
                               Sign In <i class="material-icons right">account_circle</i>
                             </button>
-                            <a style="width: 200px;" class="btn  blue darken-1 waves-effect grey-text text-lighten-5" value="Create Account" href="/consent/create">
+                            <a style="width: 200px;" class="btn light-green darken-1 waves-effect grey-text text-lighten-5" value="Create Account" href="/consent/create">
                               Create Account <i class="material-icons right">create</i>
                             </a>
                           </div>
