--- a/tnp/templates/consent/profile.html
+++ b/tnp/templates/consent/profile.html
@@ -25,8 +25,8 @@
 		      {% endif %}
 
 		      <div class="card z-depth-2">
-						<div class="card-content grey-text text-lighten-5 blue lighten-1 z-depth-1">
-	            <span class="card-title"> Preliminary Details </span>
+						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+	            <span class="card-title center"> Preliminary Details </span>
 	          </div>
 
 	          <div class="col s12 m6">
@@ -97,8 +97,8 @@
 				<div class="col s12 m10 offset-m1">
           <div class="card z-depth-2">
 
-						<div class="card-content grey-text text-lighten-5 blue lighten-1 z-depth-1">
-	            <span class="card-title"> Personal Details </span>
+						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+	            <span class="card-title center"> Personal Details </span>
 	          </div>
 
 	          <div class="col s12 m6">
@@ -215,8 +215,8 @@
 				<div class="col s12 m10 offset-m1">
           <div class="card z-depth-2">
 
-						<div class="card-content grey-text text-lighten-5 blue lighten-1 z-depth-1">
-	            <span class="card-title"> Education Details </span>
+						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+	            <span class="card-title center"> Education Details </span>
 	          </div>
 
 	          <div class="col s12 m6">
@@ -400,7 +400,7 @@
 
         <center>
           <a href="{% url 'edit_profile' %}">
-            <button class="waves-effect waves-light btn-large blue darken-3 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit">Edit Profile</button>
+            <button class="waves-effect waves-light btn-large brown darken-3 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit">Edit Profile</button>
           </a>
         </center>
 
