minor bug fixes on view profile page

--- a/tnp/templates/consent/profile.html
+++ b/tnp/templates/consent/profile.html
@@ -250,7 +250,7 @@
             <div class="col s12 m6">
               <div class="card board-exam hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
                   <div class="card-content">
-                    <span class="card-title"> HSC (Standard X) </span>
+                    <span class="card-title"> HSC (Standard XII) </span>
                     <table class="striped">
                       <col class="board-exam-fields">
                       <col class="board-exam-content">
@@ -297,7 +297,7 @@
                     			<td> {{semester_var.2}} </td>
                     		</tr>
 
-	                    	{% if semester_var.5 %}
+	                    	{% if semester_var.3 %}
 	                    		<tr>
 	                    			<td> 3 </td>
 	                    			<td> {{semester_var.3}} </td>
