company attachments will open in a new tab

--- a/tnp/templates/company/job.html
+++ b/tnp/templates/company/job.html
@@ -176,7 +176,7 @@
                                 <div class="card-content">
                                   <span class="card-title"> Attachments </span>
                                   {% for file_name, file_location in attachments %}
-                                    <p class="valign-wrapper"> <i class="tiny material-icons valign">attachment</i> &nbsp; <a href="{{ file_location }}" class="truncate"> {{ file_name }} </a> </p>
+                                    <p class="valign-wrapper"> <i class="tiny material-icons valign">attachment</i> &nbsp; <a href="{{ file_location }}" target="_blank" class="truncate"> {{ file_name }} </a> </p>
                                   {% endfor %}
                                 </div>
                             </div>
