truncation of job profile text on home page

--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -35,7 +35,7 @@
                               {% endif %}
 
                               {% if company.designation %}
-                                <p> {{ company.designation }} </p>
+                                <p class="truncate"> {{ company.designation }} </p>
                               {% else %}
                                 <p> &nbsp; </p>
                               {% endif %}
