--- a/tnp/templates/base.html
+++ b/tnp/templates/base.html
@@ -18,19 +18,19 @@
 
     <body id="main_body">
       <div class="navbar-fixed">
-        <nav class="blue darken-1 z-depth-3">
+        <nav class="white z-depth-3">
           <div class="nav-wrapper container">
-            <a href="/" class="waves-effect brand-logo white-text text-darken-2"> Training and Placement, SVNIT </a>
+            <a href="/" class="waves-effect brand-logo black-text text-darken-2"> Training and Placement, SVNIT </a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               {% if user.is_authenticated %}
-                  <li><a href="/consent/home" class="waves-effect white-text text-darken-2">Welcome {{ user.first_name }}</a></li>
-                  <li><a class="waves-effect white-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
-                  <li><a href="/consent/logout" class="waves-effect white-text text-darken-2">Logout</a></li>
+                  <li><a href="/consent/home" class="waves-effect black-text text-darken-2">Welcome {{ user.first_name }}</a></li>
+                  <li><a class="waves-effect black-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
+                  <li><a href="/consent/logout" class="waves-effect black-text text-darken-2">Logout</a></li>
               {% else %}
-                  <li><a href="#" class="waves-effect white-text text-darken-2">Welcome</a></li>
-                  <li><a href="/consent/login" class="waves-effect white-text text-darken-2">Login</a></li>
+                  <li><a href="#" class="waves-effect black-text text-darken-2">Welcome</a></li>
+                  <li><a href="/consent/login" class="waves-effect black-text text-darken-2">Login</a></li>
               {% endif %}
             </ul>
           </div>
@@ -57,12 +57,12 @@
 
       {% block body_block %}{% endblock %}
 
-      <footer class="page-footer white-text text-darken-4 blue darken-1">
-        <div class="footer-copyright white-text text-darken-2 blue darken-1" style="height: 50px">
+      <footer class="page-footer white-text text-darken-4 white z-depth-3">
+        <div class="footer-copyright white-text text-darken-2 white" style="height: 50px">
 
           <div class="container">
-            <p class="white-text text-darken-2"> <strong> © 2017 Copyright SVNIT </strong>
-              <a class="white-text text-darken-2 right" href="{% url 'about' %}">  <strong> About </strong> </a>
+            <p class="black-text text-darken-2"> <strong> © 2017 Copyright SVNIT </strong>
+              <a class="black-text text-darken-2 right" href="{% url 'about' %}">  <strong> About </strong> </a>
             </p>
           </div>
 
