--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -28,7 +28,7 @@
                     <div class="col s10 offset-s1 m4 l4">
                       <div class="card z-depth-2 hoverable">
                         <a href="/company/{{ company.url }}" class="colorless">
-                          <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
+                          <div class="card-content grey-text text-lighten-5  teal lighten-3 z-depth-1">
                             <span class="card-title truncate"> {{ company.company }} </span>
                               {% if company.badge %}
                                 <span class="new badge grey lighten-5 grey-text text-darken-2" data-badge-caption="{{ company.badge }}"></span>
