--- a/tnp/templates/consent/profile.html
+++ b/tnp/templates/consent/profile.html
@@ -25,7 +25,7 @@
 		      {% endif %}
 
 		      <div class="card z-depth-2">
-						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+						<div class="card-content grey-text text-lighten-5 red lighten-3 z-depth-1">
 	            <span class="card-title center"> Preliminary Details </span>
 	          </div>
 
@@ -97,7 +97,7 @@
 				<div class="col s12 m10 offset-m1">
           <div class="card z-depth-2">
 
-						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+						<div class="card-content grey-text text-lighten-5 red lighten-3 z-depth-1">
 	            <span class="card-title center"> Personal Details </span>
 	          </div>
 
@@ -215,7 +215,7 @@
 				<div class="col s12 m10 offset-m1">
           <div class="card z-depth-2">
 
-						<div class="card-content grey-text text-lighten-5 brown lighten-1 z-depth-1">
+						<div class="card-content grey-text text-lighten-5 red lighten-3 z-depth-1">
 	            <span class="card-title center"> Education Details </span>
 	          </div>
 
@@ -400,7 +400,7 @@
 
         <center>
           <a href="{% url 'edit_profile' %}">
-            <button class="waves-effect waves-light btn-large brown darken-3 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit">Edit Profile</button>
+            <button class="waves-effect waves-light btn-large blue-grey lighten-2 grey-text text-lighten-5 hoverable" id="create_account_button" type="submit">Edit Profile</button>
           </a>
         </center>
 
