--- a/tnp/templates/index.html
+++ b/tnp/templates/index.html
@@ -11,15 +11,15 @@
     <div id="content" style="height: calc(80vh);">
 
         <div class="container">
-            <div class="row center">
-                <img src="static/images/nit_logo.svg" width="350px" height="350px">
+            <div class="row center" style="min-height: calc(50vh);">
+                <img src="static/images/nit_logo.svg" width="35%" height="35%">
             </div>
             <div class="container" style="height: calc(5vh)">
 
             </div>
             <div class="row">
                 <ul>
-                    <li> <h4 class="col s12 center white-text text-darken-3"> Sardar Vallabhbhai National Institute of Technology, Surat </h4> </li>
+                    <li> <h4 class="col s12 center gray-text text-darken-3"> Sardar Vallabhbhai National Institute of Technology, Surat </h4> </li>
                 </ul>
             </div>
         </div>
