--- a/tnp/static/css/index.css
+++ b/tnp/static/css/index.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url("../images/background.jpg");
+  background-image: url("../images/background1.jpg");
   background-repeat: no-repeat;
 }
