--- a/tnp/templates/consent/merit_list.html
+++ b/tnp/templates/consent/merit_list.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="col s12 m12">
                 <div class="card cgpa hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
-                    <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
+                    <div class="card-content grey-text text-lighten-5 red lighten-3 z-depth-1">
                         <span class="card-title"> Merit List: {{branch}}, Batch of {{batch}} </span>
                     </div>
                     <div class="card-content">
@@ -29,11 +29,11 @@
                                     <th> Hometown </th>
                                     <th> SSC </th>
                                     <th> HSC </th>
-                                  
+
                                     {% for sem in semesters %}
                                         <th class="no-wrap"> Sem {{ sem }} </th>
                                     {% endfor %}
-                                  
+
                                     <th> Email ID </th>
                                     <th> Phone </th>
                                 </tr>
