--- a/tnp/templates/base.html
+++ b/tnp/templates/base.html
@@ -29,7 +29,7 @@
                   <li><a class="waves-effect black-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
                   <li><a href="/consent/logout" class="waves-effect black-text text-darken-2">Logout</a></li>
               {% else %}
-                  <li><a href="#" class="waves-effect black-text text-darken-2">Welcome</a></li>
+                  <li><a href="/" class="waves-effect black-text text-darken-2">Welcome</a></li>
                   <li><a href="/consent/login" class="waves-effect black-text text-darken-2">Login</a></li>
               {% endif %}
             </ul>
