--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
 
-<div id="content" class="" style="min-height: calc(100vh - 165px);">
+<div id="content" class="" style="min-height: calc(80vh);">
   <div class="section"> </div>
   <div class="valign-wrapper">
     <div class="valign" style="width:100%;">
@@ -18,7 +18,7 @@
             {% if message %}
               <div class="row" id="form_errors">
                   <div class="col s12 m6 offset-m3">
-                     <ul class="collection center red-text">
+                     <ul class="collection center red-text z-depth-2">
                         <li class="collection-item"> {{message}} </li>
                      </ul>
                   </div>
