--- a/tnp/templates/about.html
+++ b/tnp/templates/about.html
@@ -3,6 +3,7 @@
 {% block title %} About {% endblock %}
 
 {% block custom_css %}
+<link type="text/css" rel="stylesheet" href="/static/css/general.css" media="screen,projection" />
 {% endblock %}
 
 
@@ -12,23 +13,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m10 offset-m1">
-					<div class="card z-depth-2">
-
-						<div class="card-content grey-text text-lighten-5 red lighten-3 z-depth-1">
+					<div class="card z-depth-4">
+						<div class="card-content grey-text upper_round text-lighten-5 red lighten-3 z-depth-3">
 	            <span class="card-title">
 	            	About
 	            </span>
 	          </div>
 
-	          <div class="col s12 m12">
-              <div class="card hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
-								<div class="card-content">
-									<p class="">
-										This website is built for easing the placement process at Sardar Vallabhbhai National Institute of Technology, Surat. It acts as a single platform for the Training and Placement Cell and students for data management of various companies visiting for campus recruitment and students who have applied for it. Students can find all the necessary information related to the company like job profile, selection procedure, CTC, etc and the placement cell can see who applied and export the required student data to be sent the company.
-									</p>
-								</div>
-              </div>
-            </div>
+						<div class="card-content bottom_round grey-text text-darken-2 grey lighten-5">
+							<p class="">
+								This website is built for easing the placement process at Sardar Vallabhbhai National Institute of Technology, Surat. It acts as a single platform for the Training and Placement Cell and students for data management of various companies visiting for campus recruitment and students who have applied for it. Students can find all the necessary information related to the company like job profile, selection procedure, CTC, etc and the placement cell can see who applied and export the required student data to be sent the company.
+							</p>
+      			</div>
 
 					</div>
 				</div>
