--- a/tnp/templates/index.html
+++ b/tnp/templates/index.html
@@ -12,7 +12,7 @@
 
         <div class="container">
             <div class="row center" style="min-height: calc(50vh);">
-                <img src="static/images/nit_logo.svg" width="35%" height="35%">
+                <img src="static/images/nit_logo.svg" width="35%" height="35%" style="margin-top:40px">
             </div>
             <div class="container" style="height: calc(5vh)">
 
