--- a/tnp/templates/consent/merit_list.html
+++ b/tnp/templates/consent/merit_list.html
@@ -11,8 +11,8 @@
 
 {% block body_block %}
     <div id="content" style="min-height: calc(100vh - 120px);">
-        <div class="container">
-            <div class="col s12 m12">
+        <div class="row">
+            <div class="col s10 m10 offset-s1 offset-m1">
                 <div class="card cgpa hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
                     <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
                         <span class="card-title"> Merit List: {{branch}}, Batch of {{batch}} </span>
